@@ -1,8 +1,11 @@
 {START_FORM}
-<strong>{TITLE_LABEL}</strong> {TITLE} {TEMPLATE_LIST} {CHANGE_TPL} {ORPHAN_LINK}
+{TEMPLATE_LIST} {CHANGE_TPL}
+{ORPHAN_LINK} {SUBMIT} {SAVE_SO_FAR}
+<hr />
+<strong>{TITLE_LABEL}</strong> {TITLE} 
 <hr />
 {PAGE_TEMPLATE}
 <hr />
-<div class="align-center">{SUBMIT}</div>
+<div class="align-center">{SUBMIT} {SAVE_SO_FAR}</div>
 {END_FORM}
 <!-- BEGIN orphans -->{ORPHANS}<!-- END orphans -->
