@@ -1,3 +1,7 @@
+30 September 2008
++ Added button to save changes and continue.
++ Updated: templates/page_form.tpl
+
 17 September 2008
 + Caching page list
 
